--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -152,7 +152,7 @@ body {
 
 .stats-card {
   width: 800px;
-  height: 500px;
+  height: 100%;
   border-radius: 20px;
   margin: 30px 10px;
   background: #fff;
@@ -318,9 +318,6 @@ div .aButton {
   animation-duration: 3s;
 }
 
-.already {
-}
-
 @media (min-width: 600px) {
   .already {
     padding-right: 20px;
@@ -334,6 +331,28 @@ div .aButton {
     flex: 0 0 80%;
     max-width: 80%;
     max-height: 10%;
+  }
+}
+
+.fa.fa-soccer-ball-o {
+  font-size: 30px;
+  animation-duration: 2s;
+}
+
+.btn.btn-primary.btn-block.submit {
+  border-radius: 30px;
+}
+
+.matchDay {
+  margin-bottom: 0px;
+  font-size: 18px;
+}
+
+@media (max-width: 1200px) {
+  .list-unstyled.listHome {
+    height: 100%;
+    margin-right: 10%;
+    margin-left: 5%;
   }
 }
 
